--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="verify">Verification link 🔗 has been sent to your registered Email ID please verify and re-visit the application.</string>
     <string name="username">Username</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="about">"SK Easy Learning app is developed by Santosh Kumar(ER). \n😎😎😎😎😎😎\n"
+    <string name="about">"SK Easy Learning app is developed by Santosh Kumar(ER). \n😎\n"
         "👏 👏This application is developed for the education purpose.\n"
     its aim to provide best quality of contents from all over the web to develop their basic concept.
     "🤗 🤗 Language used in this application is so simple and easy to understand. \n"
