chore: updated readme and styling improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="easy">Easy-Learning</string>
     <string name="contact">"☎+91-9062414177\n"📧sankan401@gmail.com</string>
 
-    <string name="warning">Email not verified😰😰😰 </string>
+    <string name="warning">email not verified! </string>
     <string name="login_name">Sign in</string>
     <string name="register_name">Sign up</string>
     <string name="wlc">Welcome back!</string>
